# openmetrics-vici-exporter

./: .gitignore  .gitlab-ci.yml  CODEOWNERS  Cargo.toml  Dockerfile  README.md  config.yml  docker-compose.yml  flake.nix  shell.nix
.github/workflows/: build-docker.yml  build-rust.yml  build.yml
src/: config.rs  main.rs  metrics.rs  vici.rs  vici_structs.rs
src/metrics/: labels.rs
