[package]
name = "openmetrics-vici-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
prometheus-client = "0.18.1"
futures-util = "0.3.25"
actix-web-httpauth = "0.8.0"
actix-web = "4.2.1"
tokio = "1.21.2"
rsvici = "0.1"
