[package]
name = "openmetrics-vici-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
prometheus-client = "0.19.0"
futures-util = "0.3.25"
axum = "0.6.12"
tokio = { version = "1.21.2", features = ["rt-multi-thread","macros"] }
rsvici = "0.1"
anyhow = "1.0.70"
