[package]
name = "openmetrics-vici-exporter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { version = "0.13.1", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
metrics = "0.21.0"
metrics-exporter-prometheus = { version = "0.12.1", features = ["http-listener"] }
futures-util = "0.3.25"
tokio = { version = "1.21.2", features = ["rt-multi-thread","macros"] }
rsvici = "0.1"
anyhow = "1.0.70"
